--- a/PokeBar.csproj
+++ b/PokeBar.csproj
@@ -14,9 +14,12 @@
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <EnableDefaultItems>true</EnableDefaultItems>
     <Optimize>true</Optimize>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\**\*" />
+  </ItemGroup>
 </Project>
-
