refactor: Implementar refactorings #19-23 (BAIXA prioridade)
✅ #23 (Nullable): Verificado - 0 warnings
✅ #22 (Magic Numbers): Constants.cs com 15+ constantes
✅ #21 (String Allocations): Logging condicional (#if DEBUG)
✅ #20 (Random Seeds): Injeção de Random para testes determinísticos
✅ #19 (Clone): Pokemon convertido para record + Copy()

- BattleService, MainViewModel, CaptureEffectsWindow: Random injetável
- Pokemon: class → record class com Copy() usando 'with'
- BallDefinition: Novo modelo para dados de Pokébolas
- PCWindow: Nova janela para gerenciar PC/Box
- Tests: Projeto de testes unitários (18 testes passando)
- REFACTORING.md: Documentação completa (1068 linhas, 28 refactorings)

Build: 0 erros, 0 warnings | Tests: 18/18 ✅

--- a/PokeBar.csproj
+++ b/PokeBar.csproj
@@ -15,6 +15,7 @@
     <EnableDefaultItems>true</EnableDefaultItems>
     <Optimize>true</Optimize>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DefaultItemExcludes>$(DefaultItemExcludes);Tests\**</DefaultItemExcludes>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
